--- a/XCAnimationButtonExample/Base.lproj/Main.storyboard
+++ b/XCAnimationButtonExample/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,16 +22,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oa0-1h-hb5" customClass="XCAnimationButton">
-                                <rect key="frame" x="157" y="50" width="60" height="60"/>
+                                <rect key="frame" x="172" y="50" width="30" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="mya-tM-wE9"/>
-                                    <constraint firstAttribute="width" constant="60" id="r3t-1T-i0u"/>
+                                    <constraint firstAttribute="height" constant="30" id="mya-tM-wE9"/>
+                                    <constraint firstAttribute="width" constant="30" id="r3t-1T-i0u"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="image" keyPath="image" value="heart_blue"/>
+                                    <userDefinedRuntimeAttribute type="image" keyPath="image" value="icon_zambia_gn_s_hld"/>
                                     <userDefinedRuntimeAttribute type="color" keyPath="favoredColor">
-                                        <color key="value" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="value" red="0.0" green="0.80784313730000001" blue="0.72549019609999998" alpha="1" colorSpace="calibratedRGB"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="color" keyPath="circleColor">
                                         <color key="value" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -47,10 +47,20 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pRT-HH-ulS">
+                                <rect key="frame" x="172" y="88" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="faM-Zq-4it"/>
+                                    <constraint firstAttribute="height" constant="30" id="sSH-tC-PLK"/>
+                                </constraints>
+                                <state key="normal" title="Button" image="icon_zambia_gn_s_hld"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="pRT-HH-ulS" firstAttribute="top" secondItem="Oa0-1h-hb5" secondAttribute="bottom" constant="8" id="4Ru-zx-Uqu"/>
                             <constraint firstItem="Oa0-1h-hb5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="P6Z-gn-reg"/>
+                            <constraint firstItem="pRT-HH-ulS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RmX-Rq-KG2"/>
                             <constraint firstItem="Oa0-1h-hb5" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="30" id="kzm-yD-eSZ"/>
                         </constraints>
                     </view>
@@ -63,6 +73,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="heart_blue" width="12" height="12"/>
+        <image name="icon_zambia_gn_s_hld" width="30" height="30"/>
     </resources>
 </document>
